<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegistrationFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/registration"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:gravity="center"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="@id/textViewWelcome"
        app:layout_constraintEnd_toEndOf="@id/textViewWelcome"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="@id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />
    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword1"
        app:layout_constraintStart_toStartOf="@id/editTextPassword1"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword1" />
    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toRegistration"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingHorizontal="60dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@id/editTextPassword2"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword2"/>

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="60dp"
        android:paddingVertical="15dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button_confirm"
        app:layout_constraintStart_toStartOf="@id/button_confirm"
        app:layout_constraintTop_toBottomOf="@id/button_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>